REMOVE aria-label from logos

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer-top">
       <div class="footer-wrap">
-        <a href="index.html" class="footer-logo" aria-label="Go to the Homepage"
+        <a href="index.html" class="footer-logo"
           >english<span class="footer-item-accent">excellence</span>.</a
         >
         <address class="footer-address">
