--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,10 +2,7 @@
 <header class="header-section" id="home">
   <div class="container header-container">
     <!-- Navigation -->
-    <a
-      href="./index.html"
-      class="header-logo link"
-      aria-label="Go to the Homepage"
+    <a href="./index.html" class="header-logo link"
       >english<span class="header-logo-span">excellence</span>.</a
     >
     <nav class="header-nav">
