fix: added aria label

--- a/src/partials/go-top.html
+++ b/src/partials/go-top.html
@@ -1,4 +1,8 @@
-<button class="scroll-to-bottom scroll-to-top go-top" type="button">
+<button
+  class="scroll-to-bottom scroll-to-top go-top"
+  type="button"
+  aria-label="go top on page"
+>
   <svg class="scroll-to-bottom-icon" width="20" height="20">
     <use href="./img/icons.svg#icon-scroll"></use>
   </svg>
