fix: added name attribute to button

--- a/src/partials/go-top.html
+++ b/src/partials/go-top.html
@@ -1,6 +1,7 @@
 <button
   class="scroll-to-bottom scroll-to-top go-top"
   type="button"
+  name="scroll-to-top"
   aria-label="go top on page"
 >
   <svg class="scroll-to-bottom-icon" width="20" height="20">
