--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -55,7 +55,7 @@
   font-size: 14px;
   line-height: 1.71;
   max-width: 334px;
-  margin: auto;
+  margin: 0 0;
 }
 
 @media only screen and (min-width: 768px) {
@@ -66,10 +66,21 @@
   }
 }
 
+.about-list-container {
+  margin-top: 40px;
+}
+
+@media only screen and (min-width: 768px) {
+  .about-list-container {
+    margin-top: 64px;
+  }
+}
+
 @media only screen and (min-width: 1280px) {
   .about-list-container {
     display: flex;
     gap: 32px;
+    align-items: center;
   }
 }
 
@@ -79,7 +90,7 @@
   gap: 20px;
   counter-reset: item-counter 0;
   list-style-type: none;
-
+  margin: 0 0;
   padding: 0;
 }
 
@@ -90,7 +101,7 @@
 }
 
 .about-item::before {
-  content: '0'counter(item-counter);
+  content: '0' counter(item-counter);
   counter-increment: item-counter;
   color: var(--green);
   font-size: 28px;
@@ -137,12 +148,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
 }
 
 @media only screen and (min-width: 768px) {
   .about-emoji {
     max-width: 100%;
     height: 243px;
+    margin-top: 32px;
   }
 }
 
@@ -151,7 +164,6 @@
     width: 310px;
     height: 352px;
     flex-shrink: 0;
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin-top: 0;
   }
 }
