--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -55,7 +55,8 @@
   font-size: 14px;
   line-height: 1.71;
   max-width: 334px;
-  margin: 0 0;
+  margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -63,16 +64,7 @@
     font-size: 18px;
     line-height: 1.67;
     max-width: 658px;
-  }
-}
-
-.about-list-container {
-  margin-top: 40px;
-}
-
-@media only screen and (min-width: 768px) {
-  .about-list-container {
-    margin-top: 64px;
+    margin-bottom: 64px;
   }
 }
 
