--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -84,11 +84,19 @@
   list-style-type: none;
   margin: 0 0;
   padding: 0;
+  margin-bottom: 20px;
 }
 
 @media only screen and (min-width: 768px) {
   .about-list {
     gap: 32px;
+    margin-bottom: 32px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .about-list {    
+    margin-bottom: 0;
   }
 }
 
@@ -139,15 +147,13 @@
   background: var(--green);
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-top: 20px;
+  justify-content: center;  
 }
 
 @media only screen and (min-width: 768px) {
   .about-emoji {
     max-width: 100%;
     height: 243px;
-    margin-top: 32px;
   }
 }
 
@@ -156,6 +162,5 @@
     width: 310px;
     height: 352px;
     flex-shrink: 0;
-    margin-top: 0;
   }
 }
