build add icon in sprite  for theme toggler

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -67,6 +67,29 @@
         </a>
       </li>
     </ul>
+    <!-- Theme toggler -->
+    <div class="btn">
+      <input type="checkbox" name="check" id="check" />
+      <label for="check">
+        <div class="box">
+          <div class="ball"></div>
+
+          <div class="scenary">
+            <div class="moon">
+              <svg class="" width="12" height="12">
+                <use href="./img/icons.svg#icon-moon"></use>
+              </svg>
+            </div>
+            <div class="sun">
+              <svg class="" width="12" height="12">
+                <use href="./img/icons.svg#icon-sun"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </label>
+    </div>
+
     <!-- Mobile Menu -->
 
     <button
