--- a/src/css/header.css
+++ b/src/css/header.css
@@ -128,9 +128,6 @@
   width: 37px;
 }
 
-
-
-
 .header-nav-link-two:after {
   content: '';
   position: absolute;
@@ -384,7 +381,6 @@ Mobile Menu
   line-height: 1.28em;
   color: var(--white);
   transition: letter-spacing var(--animation-fast);
-
 }
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
@@ -441,4 +437,65 @@ Mobile Menu
 .menu-socials-link:hover .menu-socials-icon,
 .menu-socials-link:focus .menu-socials-icon {
   fill: var(--green);
+}
+
+/* switch theme */
+
+@media only screen and (max-width: 1279.98px) {
+  .switch-theme {
+    flex-grow: 1;
+  }
+}
+
+.switch-theme-control {
+  position: relative;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin: 0 30px 0 auto;
+  padding: 1px;
+
+  height: 15px;
+  width: 30px;
+  border-radius: 8px;
+
+  background-color: rgba(77, 194, 116, 0.704);
+}
+@media only screen and (min-width: 1280px) {
+  .switch-theme-control {
+    margin-right: 0;
+  }
+}
+
+.switch-theme-ball {
+  position: absolute;
+  left: -1px;
+  transform: translate(0, 0);
+  border-radius: 50%;
+  height: 15px;
+  width: 15px;
+  background-color: var(--grey-bg-image);
+  pointer-events: initial;
+  cursor: pointer;
+
+  transition: transform 500ms linear;
+}
+
+.switch-theme-track {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: transparent;
+  user-select: none;
+  border-radius: inherit;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.switch-theme-checkbox:checked ~ .switch-theme-ball {
+  transform: translate(16px, 0);
 }
