--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -68,26 +68,45 @@
       </li>
     </ul>
     <!-- Theme toggler -->
-    <div class="btn">
-      <input type="checkbox" name="check" id="check" />
-      <label for="check">
-        <div class="box">
-          <div class="ball"></div>
+    <div class="switch-theme">
+      <div class="switch-theme-control">
+        <!--  -->
+        <input
+          class="switch-theme-checkbox visually-hidden"
+          type="checkbox"
+          name="theme toggler"
+          id="theme-toggler"
+          aria-label="switch theme"
+        />
+        <label
+          aria-hidden="true"
+          class="switch-theme-track"
+          for="theme-toggler"
+        ></label>
 
-          <div class="scenary">
-            <div class="moon">
-              <svg class="" width="12" height="12">
-                <use href="./img/icons.svg#icon-moon"></use>
-              </svg>
-            </div>
-            <div class="sun">
-              <svg class="" width="12" height="12">
-                <use href="./img/icons.svg#icon-sun"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-      </label>
+        <div class="switch-theme-ball"></div>
+
+        <svg
+          class="switch-theme-icon"
+          width="12"
+          height="12"
+          id="moon"
+          aria-label="moon icon"
+        >
+          <use href="./img/icons.svg#icon-moon"></use>
+        </svg>
+
+        <svg
+          class="switch-theme-icon"
+          width="12"
+          height="12"
+          id="sun"
+          role="img"
+          aria-label="sun icon"
+        >
+          <use href="./img/icons.svg#icon-sun"></use>
+        </svg>
+      </div>
     </div>
 
     <!-- Mobile Menu -->
