--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -206,7 +206,10 @@
 
         <p class="leave-application-form-agreement-text">
           By clicking on “Send” button, you agree to our
-          <a class="leave-application-form-link" target="_blank" href="./privacy-policy.html"
+          <a
+            class="leave-application-form-link"
+            target="_blank"
+            href="./privacy-policy.html"
             >Privacy Policy</a
           >,<br />
           and allow Promodo to use this information for marketing purposes.
