--- a/src/partials/our-lessons.html
+++ b/src/partials/our-lessons.html
@@ -21,7 +21,9 @@
           collaborative language exercises and group activities, boosting their
           conversational skills and confidence in using English.
         </p>
-        <a href="#leave-application" class="our-lessons-button">Leave an application</a>
+        <a href="#leave-application" class="our-lessons-button"
+          >Leave an application</a
+        >
       </li>
       <li class="our-lessons-item">
         <p class="our-lessons-item-title our-lessons-title-a">Standard</p>
@@ -33,7 +35,9 @@
           all key areas of English language - reading, writing, listening, and
           speaking. It is a set of basic knowledge and skills.
         </p>
-        <a href="#leave-application" class="our-lessons-secondary-button">Leave an application</a>
+        <a href="#leave-application" class="our-lessons-secondary-button"
+          >Leave an application</a
+        >
       </li>
       <li class="our-lessons-item">
         <p class="our-lessons-item-title our-lessons-title-a black-color">
@@ -47,7 +51,9 @@
           instruction that focuses on a learner's specific language goals and
           challenges, offering personal feedback.
         </p>
-        <a href="#leave-application" class="our-lessons-button">Leave an application</a>
+        <a href="#leave-application" class="our-lessons-button"
+          >Leave an application</a
+        >
       </li>
     </ul>
   </div>
