fixed user name pattern

--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -49,7 +49,7 @@
                 placeholder="Name"
                 required
                 minlength="3"
-                pattern="[A-Za-z]+"
+                pattern="[A-Za-z\s]+"
             /></label>
           </div>
 
