fixed social links in header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -178,7 +178,7 @@
         <li class="menu-socials-item">
           <a
             class="menu-socials-link js-close-menu"
-            href="https://facebook.com"
+            href="https://www.facebook.com/goITclub/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="facebook icon"
@@ -191,7 +191,7 @@
         <li class="menu-socials-item">
           <a
             class="menu-socials-link js-close-menu"
-            href="https://instagram.com"
+            href="https://www.instagram.com/goitclub/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="instagram icon"
@@ -204,7 +204,7 @@
         <li class="menu-socials-item">
           <a
             class="menu-socials-link js-close-menu"
-            href="https://youtube.com"
+            href="https://www.youtube.com/c/GoIT"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="youtube icon"
